--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,5 +65,5 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           file: "./Dockerfile"
-          tags: ghcr.io/meetplan/backend:latest
+          tags: ghcr.io/${{github.repository_owner}}/backend:latest
           push: true
