--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,9 +61,12 @@ jobs:
           username: ${{github.actor}}
           password: ${{secrets.GITHUB_TOKEN}}
           registry: "ghcr.io"
+      - name: downcase repository owner
+        run: |
+          echo "REPO=${${{github.repository_owner}},,}" >>${GITHUB_ENV}
       - name: Build Docker image
         uses: docker/build-push-action@v2
         with:
           file: "./Dockerfile"
-          tags: ghcr.io/${{github.repository_owner}}/backend:latest
+          tags: ghcr.io/${REPO}/backend:latest
           push: true
