--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -68,5 +68,5 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           file: "./Dockerfile"
-          tags: ghcr.io/${REPO}/backend:latest
+          tags: ghcr.io/${{env.REPO}}/backend:latest
           push: true
