--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,7 +63,7 @@ jobs:
           registry: "ghcr.io"
       - name: downcase repository owner
         run: |
-          echo "REPO=${${{github.repository_owner}},,}" >>${GITHUB_ENV}
+          x=${{github.repository_owner}} tesecho "REPO=${x,,}" >> $GITHUB_ENV
       - name: Build Docker image
         uses: docker/build-push-action@v2
         with:
