--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,7 +63,7 @@ jobs:
           registry: "ghcr.io"
       - name: downcase repository owner
         run: |
-          x=${{github.repository_owner}} echo "REPO=${x,,}" >> $GITHUB_ENV
+          echo REPO=$(echo ${{github.repository_owner}} | tr '[:upper:]' '[:lower:]') >> $GITHUB_ENV
       - name: Build Docker image
         uses: docker/build-push-action@v2
         with:
