--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,7 +70,7 @@ jobs:
         run: |
           echo REPO=$(echo ${{github.repository_owner}} | tr '[:upper:]' '[:lower:]') >> $GITHUB_ENV
       - name: Change commit name in the code
-        run: sed -i 's/const COMMIT_HASH = ""/const COMMIT_HASH = "${{ github.sha }}"/g' sql/config.go
+        run: sed -i 's/const COMMIT_HASH = ""/const COMMIT_HASH = "${{ github.sha }}"/g' sql/config.go && cat sql/config.go
       - name: Build Docker image
         uses: docker/build-push-action@v2
         with:
