--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,7 +74,7 @@ jobs:
       - name: Build Docker image
         uses: docker/build-push-action@v2
         with:
-          context: "{{defaultContext}}:."
+          context: "."
           file: "./Dockerfile"
           tags: ghcr.io/${{env.REPO}}/backend:latest
           push: true
